@@ -410,8 +410,11 @@ getarticle(/*@null@*/ struct filterlist *filtlst, unsigned long *artno,
 	    || (reply / 10 != 22)) {
 	ln_log(LNLOG_SNOTICE, LNLOG_CARTICLE,
 	       "Wrong reply to ARTICLE command: \"%s\"", l);
-	if (argcount < 2 || reply / 100 == 5)
+	/* don't complain if artno missing,
+	 * 423 replies for instance don't include it, but are non-fatal. */
+	if (reply >= 500 && reply < 600)
 	    return -2;		/* fatal error */
+	/* recoverable error */
 	return -1;
     }
 
