@@ -2,6 +2,8 @@ KNOWN BUGS:
 * The code sometimes uses timeout_client where it should use a server timeout.
 |
 Changes since 20060711a:
+- Bugfix: handle 400...499 codes in reply to ARTICLE command properly.
+  Reported by Martin Brunzel.
 - Update: the leafnode.spec.in file was updated to fix rpmbuild issues
   and instruct the packager how the %doc-umentation can be relocated.
   Reported by Kevin Bulgrien.
